--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_bloc: ^8.1.6
   http: ^1.2.2
   timeago: ^3.7.0
+  bloc: ^8.1.4
+  meta: ^1.12.0
 
 dev_dependencies:
   flutter_test:
